# CG-Project

./: .gitignore  CMakeLists.txt
docs/: README.md
include/engine/: display.hpp  global.hpp  light.hpp  material.hpp  models.hpp  scenes.hpp  skybox.hpp  texture.hpp  transformation.hpp  xmlparser.hpp
include/generator/: indexed.hpp  patch.hpp  primitive.hpp  simpleshapes.hpp
include/utils/: interpolation.hpp  point.hpp  tinyxml2.h
models/: box.3d  cone.3d  plane.3d  sphere.3d  stretchedcone.3d  teapot.3d  torus.3d
scenes/: box.xml  christmas.xml  cone.xml  cone_sphere.xml  plane.xml  race.xml  solarsystem.xml  sphere.xml  static_solarsystem.xml
src/engine/: CMakeLists.txt  display.cpp  global.cpp  light.cpp  main.cpp  material.cpp  models.cpp  scenes.cpp  skybox.cpp  texture.cpp  transformation.cpp  xmlparser.cpp
src/generator/: CMakeLists.txt  box.cpp  cone.cpp  main.cpp  patch.cpp  plane.cpp  primitive.cpp  sphere.cpp
src/utils/: CMakeLists.txt  interpolation.cpp  point.cpp  tinyxml2.cpp
